# linuxtyper

./: CMakeLists.txt  README.md  gui.glade  install.sh  linuxtyper  linuxtyper.desktop  main.c
